force-app/main/default/objects/Performance_Target__c/Performance_Target__c.object-meta.xml
<CustomObject>
    <description>Stores performance targets for users, teams, and organization. Supports hierarchy rollup via self-referencing Parent_Target__c lookup.</description>
    <label>Performance Target</label>
    <nameField>
        <displayFormat>TGT-{00000}</displayFormat>
        <label>Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>