force-app/main/default/objects/Performance_Target__c/fields/Achievement_Pct__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Pct__c</fullName>
    <formula>IF(Target_Value__c &gt; 0, (Actual_Value__c / Target_Value__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>