force-app/main/default/objects/Performance_Target__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>