force-app/main/default/objects/Performance_Target__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Performance Targets</relationshipLabel>
    <relationshipName>Performance_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>