force-app/main/default/objects/Performance_Target__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Performance_Target__c</referenceTo>
    <relationshipLabel>Cloned Targets</relationshipLabel>
    <relationshipName>Cloned_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>