force-app/main/default/objects/Performance_Target__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <label>Last Calculated</label>
    <type>DateTime</type>
</CustomField>