force-app/main/default/objects/Performance_Target__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leads_Generated</fullName>
                <label>Leads Generated</label>
            </value>
            <value>
                <fullName>Site_Visits_Completed</fullName>
                <label>Site Visits Completed</label>
            </value>
            <value>
                <fullName>Bookings_Closed</fullName>
                <label>Bookings Closed</label>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>