force-app/main/default/objects/Performance_Target__c/fields/Parent_Target__c.field-meta.xml
<CustomField>
    <fullName>Parent_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Target</label>
    <referenceTo>Performance_Target__c</referenceTo>
    <relationshipLabel>Child Targets</relationshipLabel>
    <relationshipName>Child_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>