force-app/main/default/objects/Performance_Target__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <formula>CASE(TEXT(Period_Type__c),
  &quot;Monthly&quot;, TEXT(MONTH(Period_Start__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Period_Start__c)),
  &quot;Quarterly&quot;, &quot;Q&quot; &amp; TEXT(CEILING(MONTH(Period_Start__c) / 3)) &amp; &quot; &quot; &amp; TEXT(YEAR(Period_Start__c)),
  &quot;Yearly&quot;, &quot;FY &quot; &amp; TEXT(YEAR(Period_Start__c)),
  TEXT(Period_Start__c) &amp; &quot; - &quot; &amp; TEXT(Period_End__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Label</label>
    <type>Text</type>
</CustomField>