force-app/main/default/objects/Performance_Target__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>MAX(Target_Value__c - Actual_Value__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>