force-app/main/default/objects/Performance_Target__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Achievement_Pct__c &gt;= 100, &quot;Achieved&quot;,
  IF(Achievement_Pct__c &gt;= 75, &quot;On Track&quot;,
    IF(Achievement_Pct__c &gt;= 50, &quot;At Risk&quot;, &quot;Behind&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>