force-app/main/default/objects/Performance_Target__c/fields/Target_Level__c.field-meta.xml
<CustomField>
    <fullName>Target_Level__c</fullName>
    <label>Target Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>