force-app/main/default/objects/Performance_Target__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>